package rpg;

public class Bow extends Weapon {
  
  public Bow() {
    super();
  }

  public String asciiArt() {
    return "bow";
    // "    /| \n" +
    // "   / | \n" +
    // "  /  | \n" +
    // " |   | \n" +
    // " \   | \n" +
    // "  \  | \n" +
    // "   \ | \n" +
    // "    \| \n"
    // ;
  }
}
