package rpg;

public class Hammer extends Weapon {

  public Hammer() {
    super();
  }
  
  public String asciiArt() {
    return "Hammer";
  }
}
