@startuml

title TRPG

package health {
  abstract Healthy {
    - int hp
    + takeDamage(Weapon): void
    + getHp(): int
  }
  class Monster {}
  class Obstacle {}
  class Player {
    - int maxHP 
    - int gold
    - int level
    - int xp
    - Weapon[] inventory
  }

  class Orc {}
  class Elf {}
  class Dwarf {}
  class Human {}
}

Orc --|> Player
Elf --|> Player
Dwarf --|> Player
Human --|> Player

package map {
  class Position {
      - int x
      - int y
      - isNextTo(Position): boolean
      - getPosition(): Position
      - shiftGauche(): void
      - shiftDroite(): void
      - shiftBas(): void
      - shiftHaut(): void
    }

   abstract Positionnable {
    - Position poisition
    - getPosition(): Position
    - move(Position): void
    - {abstract} resolveEncounter(Player): void
    - {abstract} getSymbol(): String
  }
  class GameMap {
      - int size
      - int difficulty
      - (Position: Positionnable) tiles
      - player: Player
      - initialize(): void
      + resolvePosition(): void
    }
}

package weapon {
  abstract Weapon {
      - damage: Int
      - price: Int
      + getDamage(): Int
      + getPrice(): Int
    }
  class Axe {}
  class Bow {}
  class Sword {}
  class Hammer {}
}
package encounterable {
  class Fontain {
    - charges: Int
  }
  class Shop {
    - weapons: Weapon[]
    - initialize(): void
    + getShop(): Weapon[]
    + showShop(): void
    + sell(Weapon): void
  }
}

Positionnable <|-- Healthy
Positionnable <|-- Shop
Positionnable <|-- Fontain

Healthy <|-- Player
Healthy <|-- Monster
Healthy <|-- Obstacle

Weapon <|-- Axe
Weapon <|-- Bow
Weapon <|-- Sword
Weapon <|-- Hammer


@enduml
